# whidgle

./: .gitignore  LICENSE  README.md  run1.sh  run3.sh  train.sh  whidgle.cabal
src/: Main.hs
src/Whidgle/: Api.hs  Board.hs  Bot.hs  Comparisons.hs  CompositeMap.hs  Dijkstra.hs  Hoisting.hs  POIs.hs  Pathfinding.hs  Play.hs  Rules.hs  Temporal.hs  Types.hs  Util.hs
