name:                whidgle
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Zekka
maintainer:          zekka@messageintercepted.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable whidgle
  main-is:             Main.hs
  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TemplateHaskell, FlexibleInstances
  build-depends:       base >=4.5 && <4.6, lens >=4.1 && <4.2, text >=1.1 && <1.2, mtl >=2.1 && <2.2, containers >=0.4 && <0.5, transformers >=0.3 && <0.4, aeson >=0.7 && <0.8, http-client >=0.3 && <0.4, http-types >=0.8 && <0.9, memoize==0.6.*, astar==0.2.*, monad-loops==0.4.*, optparse-applicative>=0.8 && <= 0.9, parallel==3.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
