name:                whidgle
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Zekka
maintainer:          zekka@messageintercepted.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable whidgle
  main-is:             Main.hs
  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TemplateHaskell, FlexibleInstances
  build-depends:       base >=4.5, lens >=4.1, text >=1.1, mtl >=2.1, containers >=0.4 , transformers >=0.3, aeson >=0.7, http-client >=0.3, http-types >=0.8, memoize>=0.6, monad-loops>=0.4, optparse-applicative>=0.8, parallel==3.2.*, PSQueue==1.1.*, network >=2.4
  hs-source-dirs:      src
  default-language:    Haskell2010
